[project]
name = "tests"
version = "0.1.0"
description = ""
authors = [
    {name = "Yang Zhang",email = "zy31415@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pulumi (>=3.213.0,<4.0.0)",
    "pulumi-kubernetes (>=4.24.1,<5.0.0)"
]
test = [
    "requests (>=2.32.5,<3.0.0)",
    "tenacity (>=9.1.2,<10.0.0)"
]
